--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeyU Landing Page — #2 PSD To HTML Coversion</title>
+    <title>1Ghalon Download</title>
 
     <!-- Favicon -->
 
@@ -43,10 +43,10 @@
     <!-- Required Social Preview MetaTags -->
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="HeyU Landing Page — #2 PSD To HTML Coversion" />
+    <meta name="title" content="1Ghalon Download" />
     <meta
       name="description"
-      content="HeyU is an open source single page App Landing page website PSD to HTML template. This is my #2 PSD To HTML Conversion. Best of Luck To Me ☻"
+      content="1Ghalon is a mobile app designed to show fuel prices and directions to nearby fuel stations. It sources fuel prices from CediRates."
     />
 
     <!-- Open Graph / Facebook -->
@@ -58,7 +58,7 @@
     />
     <meta
       property="og:description"
-      content="HeyU is an open source single page App Landing page website PSD to HTML template. This is my #2 PSD To HTML Conversion. Best of Luck To Me ☻"
+      content="1Ghalon is a mobile app designed to show fuel prices and directions to nearby fuel stations. It sources fuel prices from CediRates."
     />
     <meta property="og:image" content="images/preview.png" />
 
@@ -70,11 +70,11 @@
     />
     <meta
       property="twitter:title"
-      content="HeyU Landing Page — #2 PSD To HTML Coversion"
+      content="1Ghalon Download"
     />
     <meta
       property="twitter:description"
-      content="HeyU is an open source single page App Landing page website PSD to HTML template. This is my #2 PSD To HTML Conversion. Best of Luck To Me ☻"
+      content="1Ghalon is a mobile app designed to show fuel prices and directions to nearby fuel stations. It sources fuel prices from CediRates."
     />
     <meta property="twitter:image" content="images/preview.png" />
 
@@ -102,7 +102,7 @@
     <header id="home">
       <nav>
         <div class="navbar-logo">
-          <a href="#" class="logo">HeyU</a>
+          <a href="#" class="logo">1Ghalon</a>
         </div>
         <div id="navbar">
           <ul>
@@ -134,8 +134,8 @@
           <div class="col span_1_of_2">
             <div class="hero-description">
               <h1>
-                Simple, safe <br />
-                & beautiful.
+                Every cedi <br />
+                counts.
               </h1>
               <p>
                 With <span class="bold-text">HeyU</span>, you'll get fast,
