--- a/index.html
+++ b/index.html
@@ -138,12 +138,11 @@
                 counts.
               </h1>
               <p>
-                With <span class="bold-text">HeyU</span>, you'll get fast,
-                simple, secure messaging!
+                Know the right the right station before you move.
               </p>
 
               <a href="#download" class="btn"
-                ><span class="download-btn"> Download Now</span></a
+                ><span class="download-btn">Download Now</span></a
               >
             </div>
           </div>
