--- a/index.html
+++ b/index.html
@@ -435,12 +435,13 @@
     <section id="download">
       <div class="row">
         <img class="app-logo" src="images/app_logo.png" alt="" />
+        <img class="app-logo" src="images/app_logo.png" alt="" />
         <h2 class="stylish_heading">
           Download the app <span class="red_dot">.</span>
         </h2>
         <p class="">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et.
+          1Ghalon is a mobile app designed to show fuel prices and 
+          directions to nearby fuel stations. It sources fuel prices from CediRates.
         </p>
 
         <a href="javascript:void()">
@@ -464,8 +465,8 @@
       <div class="language-option">
         <select name="Languages">
           <option value="English" selected>ENGLISH</option>
-          <option value="বাংলা">বাংলা</option>
-          <option value="हिन्दी">हिन्दी</option>
+          <!--<option value="বাংলা">বাংলা</option>
+          <option value="हिन्दी">हिन्दी</option> -->
         </select>
       </div>
     </section>
