--- a/index.html
+++ b/index.html
@@ -435,7 +435,6 @@
     <section id="download">
       <div class="row">
         <img class="app-logo" src="images/app_logo.png" alt="" />
-        <img class="app-logo" src="images/app_logo.png" alt="" />
         <h2 class="stylish_heading">
           Download the app <span class="red_dot">.</span>
         </h2>
@@ -446,6 +445,8 @@
 
         <a href="javascript:void()">
           <img src="images/appstore.png" alt=""
+        /></a>
+        <img src="images/playstore.png" alt=""
         /></a>
       </div>
     </section>
