--- a/index.html
+++ b/index.html
@@ -195,13 +195,15 @@
         <div class="col span_1_of_2">
           <div class="section-description features-description col1">
             <h2 class="stylish_heading">
-              Easy Messaging <span class="red_dot">.</span>
+              Easy Directions <span class="red_dot">.</span>
             </h2>
             <p class="little-description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              1Ghalon makes it easy to find the nearest and cheapest fuel 
+              stations in Ghana. Simply open the app, allow location access, 
+              and it will show you updated fuel prices and clear 
+              directions to each station. Choose the best route—saving you time and 
+              money on every trip.
+
             </p>
           </div>
         </div>
@@ -210,13 +212,15 @@
         <div class="col span_1_of_2">
           <div class="section-description features-description">
             <h2 class="stylish_heading">
-              Keep in touch <span class="red_dot">.</span>
+              NPA News <span class="red_dot">.</span>
             </h2>
             <p class="little-description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              With 1Ghalon, you get real-time updates from the 
+              National Petroleum Authority (NPA) right in the app.
+              Whether it's changes in fuel prices, new policies, 
+              or important industry news, 1Ghalon keeps you informed by 
+              syncing directly with official NPA blog so you never 
+              miss a critical update.
             </p>
           </div>
         </div>
