--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
     <!-- End of Required Social Preview MetaTags -->
 
-    <!-- LATO — Google Font -->
+    <!-- Hanken+Grotesk — Google Font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,400;0,700;0,900;1,400&display=swap"
       rel="stylesheet"
     />
-    <!-- End: LATO — Google Font -->
+    <!-- End: Hanken+Grotesk — Google Font -->
 
     <!-- Main CSS File -->
     <link rel="stylesheet" href="css/styles.css" />
