--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 counts.
               </h1>
               <p>
-                Know the right the right station before you move.
+                Know the right station before you move.
               </p>
 
               <a href="#download" class="btn"
