--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://alnahian2003.github.io/heyu" />
+    <meta property="og:url" content="https://onelink.to/pbx4uz" />
     <meta
       property="og:title"
-      content="HeyU Landing Page — #2 PSD To HTML Coversion"
+      content="1Ghalon App Download Landing Page — Know the right station before you move."
     />
     <meta
       property="og:description"
@@ -66,7 +66,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://alnahian2003.github.io/heyu"
+      content="https://onelink.to/pbx4uz"
     />
     <meta
       property="twitter:title"
