--- a/index.html
+++ b/index.html
@@ -310,20 +310,25 @@
   <!-- End: How To Section -->
 
   <!-- Subscribe Section -->
-  <section id="subscribe">
-    <div class="row">
-      <h2 class="stylish_heading">
-        Subscribe to our newsletter <span class="red_dot">.</span>
-      </h2>
-      <p class="">
-        Stay on top of fuel prices and find your next station effortlessly with 1GHALON!
-      </p>
-    </div>
-    <div class="subscribe-form">
-      <input class="form-input" type="email" placeholder="Your email address" required />
-      <input type="submit" class="btn subscribe-btn" value="Subscribe" />
-    </div>
-  </section>
+  <!-- <section id="subscribe">
+      <div class="row">
+        <h2 class="stylish_heading">
+          Subscribe to our newsletter <span class="red_dot">.</span>
+        </h2>
+        <p class="">
+          Stay on top of fuel prices and find your next station effortlessly with 1GHALON!
+        </p>
+      </div>
+      <div class="subscribe-form">
+        <input
+          class="form-input"
+          type="email"
+          placeholder="Your email address"
+          required
+        />
+        <input type="submit" class="btn subscribe-btn" value="Subscribe" />
+      </div>
+    </section> -->
   <!-- End: Subscribe Section -->
 
   <!-- Download The App Section -->
