--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
   <!-- End: Download The App Section -->
 
   <!-- Footer Section -->
-  <!-- <section id="footer">
+  <section id="footer">
     <div class="links">
       <ul>
         <li><a href="#home">HOME</a></li>
@@ -364,14 +364,14 @@
         <li><a href="#download">DOWNLOAD</a></li>
       </ul>
     </div>
-    <div class="language-option">
+   <!--  <div class="language-option">
       <select name="Languages">
         <option value="English" selected>ENGLISH</option>
         <option value="বাংলা">বাংলা</option>
         <option value="हिन्दी">हिन्दी</option>
       </select>
-    </div>
-  </section> -->
+    </div> -->
+  </section> 
   <!-- End: Footer Section -->
 
   <!-- Required JavaScript Files & CDN -->
